Update Index, Contato and Materias
Some corrections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Biografia Levi</title>
+    <title>Biografia Ricardo Levi</title>
 </head>
 <body>
 
@@ -32,9 +32,9 @@
     <h3>O que gosto de fazer</h3>
 
     <ol>
-        <li> <a target="_blank" href="https://music.apple.com/us/browse">Ouvir músicas de origem variada;</a></li>
-        <li><a target="_blank" href="https://rodasdesamba.com.br/">Uma boa roda de Samba</a>;</li>
-        <li><a target="_blank" href="https://www.viajenaviagem.com/">Viagens pelo Brasil;</a></li>
+        <li> <a target="_blank" href="https://">Ouvir músicas de origem variada;</a></li>
+        <li><a target="_blank" href="https://">Uma boa roda de Samba</a>;</li>
+        <li><a target="_blank" href="https://">Viagens pelo Brasil;</a></li>
         <li>Acompanhar uma boa série na TV;</li>
     </ol>
     <a target="_blank" href="./pages/contato/contato.html">
@@ -53,7 +53,7 @@
         <tbody>
             <tr>
                 <td>1976 - 1979</td>
-                <td>Formação e Técnico em Eletrotécnica</td>
+                <td>Formação de Técnico em Eletrotécnica</td>
             </tr>
             <tr>
                 <td> 1980 - 1986</td>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td>1987</td>
-                <td>Pós Graduação em Alálise de Sistemas</td>
+                <td>Pós Graduação em Análise de Sistemas</td>
             </tr>
             <tr>
                 <td>2005 - 2018</td>
@@ -103,7 +103,7 @@
         </tr>
         </tbody>
         <tfoot>
-            <td><a target="_blank" href="./pages/materiais/materiais.html">Saiba mais sobre os Materiais</a> 
+            <td><a target="_blank" href="./pages/materiais/materias.html">Saiba mais sobre as Materias</a> 
             <a target="_blank" href="./pages/contato/contato.html">
             <h3>Entre em contato</h3>
         </a>
