--- a/pages/contato/contato.html
+++ b/pages/contato/contato.html
@@ -9,7 +9,7 @@
     <h3>Meus contatos:</h3>
         <p>Telefone: (21)99985-4134</p>
         <p>e-mail: ricardolevi2005@hotmail.com</p>
-    <form action="mailto:ricardolevi.campos@gmail.com" method="POST">
+<!--     <form action="mailto:" method="POST">
         <label for="">Nome Completo</label><br>
         <input type="text" name="nome"/> <br>
         <br>
@@ -19,6 +19,6 @@
         <label for="">Sua Mensagem de</label><br>
         <textarea name="mensagem" id="" cols="30" rows="10"></textarea><br><br>
         <input type="submit" /> <br>
-    </form>
+    </form> -->
 </body>
 </html>
