--- a/pages/materias/materias.html
+++ b/pages/materias/materias.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materiais</title>
+    <title>Materias</title>
 </head>
 <body>
-    <h1>Página Materiais</h1>
+    <h1>Página Materias</h1>
 </body>
 </html>
