--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td>
                 <h1>Ricardo Levi Menezes Campos</h1>
                 <p>Engenheiro Eletricista e Analista de Sistemas da <strong>Dedaline</strong>.</p>
-                <p>Engenheiro especialista em <em>inteligência de perdas</em>. Tenho o Samba como uma paixão.</p>
+                <p>Engenheiro especialista em <em>Inteligência de Perdas</em>. Tenho o Samba como uma paixão.</p>
             </td>
         </tr>
     </table>
