--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </tr>
         </tbody>
         <tfoot>
-            <td><a target="_blank" href="./pages/materiais/materias.html">Saiba mais sobre as Materias</a> 
+            <td><a target="_blank" href="./pages/materiais/materiais.html">Saiba mais sobre os Materiais</a> 
             <a target="_blank" href="./pages/contato/contato.html">
             <h3>Entre em contato</h3>
         </a>
