--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul>
         <li>Sites para Escritórios de Advocacia</li>
         <li>Estudos de Data Science na Área de Energia</li>
-        <li>Projeto de Inplantação de Tecnologias Digitais</li>
+        <li>Projeto de Implantação de Tecnologias Digitais</li>
     </ul>
 
     <h3>O que gosto de fazer</h3>
