--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <h3>Entre em Contato</h2>
                 <h4>Estarei a sua disposição para lhe melhor atender.</h3>
                 <p class="contact-message">Mande uma mensagem relatando o que você deseja que responderei seu e-mail!</p>
-            <a class="btn" href="mailto:ricardolevi2005@hotmail.com">Entre em contato</a>
+            <a class="btn" href="mailto:ricardolev@dedaline.dev">Entre em contato</a>
         </div>
         </main>
 
