--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <footer class="bottom-container">
         <a class="footer-link" href="https://www.youtube.com/channel/UCnoYMC8SIPAhyyWazu9SMFg">Youtube</a>
         <a class="footer-link" href="https://github.com/ricardolevi2005">Github</a>
-        <a class="footer-link" href="https://www.instagram.com/ricardolevicampos/">Instagram</a>
+        <a class="footer-link" href="https://www.instagram.com/dedaline_dev/">Instagram</a>
        <p class="copyright">© 2021 Ricardo Levi @ Dedaline.</p>
    </footer>
 </html>
