Corrections in Index and Style

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             </div>
             <div class="contact-me">
                 <h3>Entre em Contato</h2>
-                <h4>Estarei a sua disposição para lhe melhor atender.</h3>
-                <p class="contact-message">Mande uma mensagem relatando o que você deseja que responderei seu e-mail!</p>
+                <h4>Estarei à sua disposição para melhor atender.</h3>
+                <p class="contact-message">Mande uma mensagem relatando o que você deseja, que entrarei em contato!</p>
             <a class="btn" href="mailto:ricardolevi@dedaline.dev">Entre em contato</a>
         </div>
         </main>
@@ -135,6 +135,6 @@
         <a class="footer-link" href="https://www.youtube.com/channel/UCnoYMC8SIPAhyyWazu9SMFg">Youtube</a>
         <a class="footer-link" href="https://github.com/ricardolevi2005">Github</a>
         <a class="footer-link" href="https://www.instagram.com/dedaline_dev/">Instagram</a>
-       <p class="copyright">© 2021 Ricardo Levi @ Dedaline.</p>
+       <p class="copyright">©2021 - Ricardo Levi - Dedaline.</p>
    </footer>
 </html>
