--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <tbody>
                     
                             <tr>
-                                <td>Conhecimentod em HTML e CSS </td>
+                                <td>Conhecimentos em HTML e CSS </td>
                                 <td>⭐️⭐️⭐️</td>
                             </tr>
                             <tr>
